# hs-containers-extra

./: CHANGELOG.md  README.md  cabal.project.freeze  containers-extra.cabal
lib/Data/ToMap/: Class.hs
