cabal-version:       2.4
name:                containers-extra
version:             0.1.0.0
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          git@dandart.co.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:    Data.ToMap.Class
 -- other-extensions:
  build-depends:      base >= 4.12 && < 5
                    , containers
                    , text
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies, ImportQualifiedPost, OverloadedStrings, UnicodeSyntax
  ghc-options:         -Wall -Werror
                      -Weverything
                     -Wno-unsafe -Wno-safe
                      -Wno-missing-import-lists
                      -Wno-missing-export-lists
                      -Wno-implicit-prelude
                      -- These three are not supported in ghcjs from reflex
                      -Wno-missing-safe-haskell-mode
                      -- -Wno-missing-kind-signatures
                      --                      -Wno-missing-local-signatures


test-suite containers-extra-test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies, ImportQualifiedPost, OverloadedStrings, UnicodeSyntax
  main-is:             Spec.hs
  ghc-options: -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
                      -Weverything
                      -Wno-unsafe -Wno-safe
                      -Wno-missing-import-lists
                      -Wno-missing-export-lists
                      -Wno-implicit-prelude
                      -- These three are not supported in ghcjs from reflex
                      -Wno-missing-safe-haskell-mode
                      -- -Wno-missing-kind-signatures
                      --                      -Wno-missing-local-signatures
  build-depends:
    base >= 4.12 && < 5
    -- , containers-extra
    , hspec
    -- , hspec-core
    -- , hspec-expectations
    -- , HUnit
    -- , QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    MainSpec
