cabal-version:      3.12
name:               containers-extra
version:            0.2.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk
-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md
library
  exposed-modules:    Data.ToMap.Class
  -- other-extensions:
  build-depends:
    , base        ^>=4.21.0.0
    , containers  ^>=0.8
    , text        ^>=2.1.2
  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures

test-suite containers-extra-test
  if arch(javascript) || arch(wasm32)
    buildable: False
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax
  main-is:            Spec.hs
  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N 
  ghc-options:
    -Wall -Werror -Weverything
    -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
  build-depends:
    , base   ^>=4.21.0.0
    , hspec  ^>=2.11.10
  -- , containers-extra
  -- , hspec-core ^>=2.11.10
  -- , hspec-expectations ^>=0.8.4
  -- , HUnit
  -- , QuickCheck ^>=2.16.0.0
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      MainSpec
